@@ -1,5 +1,10 @@
 $Id$
 
+2006-09-23 Anonymous <l...@gmail.com>
+
+	* psk-crack.c: Added code to allow cracking Nortel Contivity
+	  pre-shared keys, which use a variation of Mamro's method.
+
 2006-08-30 Roy Hills <Roy.Hills@nta-monitor.com>
 
 	* ike-backoff-patterns: Added new PIX backoff pattern, with details
